bug: 카테고리 순서 보장되게 변경, 드롭다운 z-index 수정

--- a/client/src/components/MainTab/MainTab.scss
+++ b/client/src/components/MainTab/MainTab.scss
@@ -104,6 +104,7 @@
     position: absolute;
     top: 65px;
     left: 0px;
+    z-index: 1;
     > li {
       padding: 16px 24px;
       display: flex;
